# NFDI4Earth-HydroTurtle2

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: mapping-shp-file.md  mapping_csv_attributes.md  mapping_csv_timeseries.md  mapping_format.md  readme.md
examples/camels_gb/: mapping_camels_gb_attributes.json  mapping_camels_gb_timeseries.json  mapping_sample_only_with_reprojection.json  mapping_shp_polygons_camels_gb.json
examples/lamah_ce/: mapping_lamah_ce_attributes.json  mapping_lamah_ce_timeseries.json  mapping_lamah_timeseries_test_1.json  mapping_shp_points_lamah_ce.json  mapping_shp_polygons_lamah_ce.json
examples/quadica/: mapping_quadica_attributes.json  mapping_quadica_meteo_monthly.json  mapping_quadica_time_series.json  mapping_shp_points_QUADICA.json  mapping_shp_polygons_QUADICA.json  mapping_wrtds_monthly.json
hydroturtle/: cli.py
hydroturtle/core/: engine.py  engine_shp.py  evaluator.py  ids.py  mappers.py  triples.py
hydroturtle/geo/: shp_reader.py  wkt.py
hydroturtle/io/: ttl_writer.py
hydroturtle/mapping/: loader.py  schema.py
legacy/: Fileter_unique_triples_fucntion.py  HydroTurtle_for_shapefiles_without_streamlit.py  HydroTurtle_with_wgs84_without_streamlit copy.py  Test_streamlit_interface_7_shapefiles_3.py  categorize_file_function.py  check_values_in_a_list_fucntion.py  delimeter_selection_funciton.py  extract_sensor_id_from_file_fuciton.py  format_floats_DF_readed_values_function.py  mapping_prefixes_fuction.py  observation_mapping_function.py  print_RDF_in_turtle_file_fuction.py  time_inputs_from_user_management.py  time_inputs_from_user_management_without_st.py  time_variables_creation_from_csv_funtion.py  transform_coordinates_func.py  triple_creation_from_list_function.py  triple_creation_from_string_function.py
(+1 files in other folders)
