[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydroturtle"
version = "0.1.0"
description = "CSV → RDF (SOSA/QUDT) converter with JSON mappings"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "shamilasudalshana" }]
requires-python = ">=3.9"
dependencies = [
    "charset-normalizer>=3.3.0"
]

[project.urls]
Homepage = "https://github.com/shamilasudalshana/NFDI4Earth-HydroTurtle2"

[project.scripts]
hydroturtle = "hydroturtle.cli:main"
