[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydroturtle"
version = "0.1.0"
description = "Convert hydrometeorological datasets (CSV/SHP) to RDF/Turtle using JSON mappings (SOSA/QUDT/GeoSPARQL)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "shamilasudalshana", "aurioldegbelo}]

dependencies = [
  "charset-normalizer>=3.3.0",
]

keywords = ["RDF", "GeoSPARQL", "SOSA", "QUDT", "hydrology", "hydrometeorology", "ETL", "CSV", "shapefile"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology",
]

[project.optional-dependencies]
geo = [
  "shapely>=2.0",
  "fiona>=1.9",
  "pyproj>=3.6",
]

[project.urls]
Homepage = "https://github.com/shamilasudalshana/NFDI4Earth-HydroTurtle2"

[project.scripts]
hydroturtle = "hydroturtle.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hydroturtle*"]



